# pta-generator

./: .CHANGELOG.md.swp  .gitignore  ALLOWED_SIGNERS  ALLOWED_SIGNERS.asc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  build.rs  deny.toml  justfile
.github/workflows/: ci.yml
benchmark/: .gitignore  hyperfine.sh  justfile
docs/: design.adoc  readme.adoc
src/: cli_args.rs  commands.rs  generators.rs  main.rs  setup.rs  txn_uuid.rs  writers.rs
src/commands/: audit.rs  comm.rs  plain.rs
src/generators/: beancount.rs  ledger.rs  tackler.rs
