[package]
name = "pta-generator"
description = "Test data generator for PTA applications"
version = "26.2.2-dev"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/tackler-ng/pta-generator"
keywords = [ "accounting", "plaintext", "testing" ]
include = [ "src/**/*.rs", "README.md", "build.rs", "LICENSE", "NOTICE" ]
rust-version = "1.85.0"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
jiff = "0.2.20"
uuid = { version = "1.21.0", features = [ "v5" ] }
